--- a/atom-proje/endustriyel-detay.html
+++ b/atom-proje/endustriyel-detay.html
@@ -348,7 +348,6 @@
 
 
 
-
         <div class="footer-above">
             <div class="online-form wow fadeInLeft" data-wow-delay="150ms">
                 <h5>ONLINE FORM</h5>
@@ -364,24 +363,21 @@
         <footer>
 
             <div class="container body-5">
-                <div class="row">
+                <div class="row gy-1">
                     <div class="col-md-4 col-lg-3 mb-5 mb-md-0">
                         <div class="logo-section d-flex flex-column wow fadeInLeft" data-wow-delay="150ms">
-                            <a href="#"><img class="mb-4 logo-img" src="./frontend/images/logo-footer.png" alt=""></a>
-                            <a href="#"
-                                class="footer-instagram d-flex flex-column align-items-center text-center text-md-start">
+                            <a href="#"><img  class="mb-4 logo-img" src="./frontend/images/logo-footer.png" alt=""></a>
+                            <a href="#" class="footer-instagram d-flex flex-column align-items-center text-center text-md-start">
                                 <i class="fa-brands fa-instagram"></i>
                                 <p>BİZİ <span>INSTAGRAM'DA</span><br /> TAKİP EDİN</p>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-8 col-lg-9">
-                        <div class="row g5">
-                            <div class="col-sm-6  col-lg-3">
+                        <div class="row gx-2 gx-lg-4">
+                            <div class="col-sm-6  col-lg-3 order-1">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="150ms">
-                                    <a href="#">
-                                        <h5>KURUMSAL</h5>
-                                    </a>
+                                    <a href="#"><h5>KURUMSAL</h5></a>
                                     <ul>
                                         <li><a href="#">Hakkımızda</a></li>
                                         <li><a href="#">Gizlilik Politikası</a></li>
@@ -389,51 +385,45 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
+                            <div class="col-sm-6  col-lg-3 order-2 order-md-4 order-lg-2">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="300ms">
-                                    <a href="#">
-                                        <h5>EV VE OFİS</h5>
-                                    </a>
+                                    <a href="#"><h5>EV VE OFİS</h5></a>
                                     <ul>
-                                        <li><a href="#">• Klima Bakım Onarım</a></li>
-                                        <li><a href="#">• Televizyon Bakım Onarım</a></li>
-                                        <li><a href="#">• Çamaşır makinası Bakım Onarım</a></li>
-                                        <li><a href="#">• Bulaşık makinası Bakım Onarım</a></li>
-                                        <li><a href="#">• Buzdolabı Bakım Onarım</a></li>
-                                        <li><a href="#">• Kombi Bakım Onarım</a></li>
-                                        <li><a href="#">• Ocak Bakım Onarım</a></li>
-                                        <li><a href="#">• Fırın Bakım Onarım</a></li>
-                                        <li><a href="#">• Aspiratör Bakım Onarım</a></li>
-                                        <li><a href="#">• Elektrikli Ev Aletleri Bakım Onarım</a></li>
+                                        <li><a href="#">•   Klima Bakım Onarım</a></li>
+                                        <li><a href="#">•   Televizyon  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Çamaşır makinası  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Bulaşık makinası  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Buzdolabı  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Kombi  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Ocak  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Fırın  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Aspiratör  Bakım Onarım</a></li>
+                                        <li><a href="#">•   Elektrikli Ev Aletleri Bakım Onarım</a></li>
                                     </ul>
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
+                            <div class="col-sm-6  col-lg-3 order-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="450ms">
-                                    <a href="#">
-                                        <h5>ENDÜSTRİYEL MUTFAK</h5>
-                                    </a>
+                                    <a href="#"><h5>ENDÜSTRİYEL MUTFAK</h5></a>
                                     <ul>
-                                        <li><a href="#">• Endüstriyel Buzdolabı Servisi</a></li>
-                                        <li><a href="#">• Endüstriyel Bulaşık Makinesi Servisi</a></li>
-                                        <li><a href="#">• Endüstriyel Ocak Servisi</a></li>
-                                        <li><a href="#">• Endüstriyel Fritöz Servisi</a></li>
-                                        <li><a href="#">• Endüstriyel Buz Makinesi Servisi</a></li>
-                                        <li><a href="#">• Endüstriyel Fırın Servisi</a></li>
+                                        <li><a href="#">•   Endüstriyel Buzdolabı Servisi</a></li>
+                                        <li><a href="#">•   Endüstriyel Bulaşık Makinesi Servisi</a></li>
+                                        <li><a href="#">•   Endüstriyel Ocak Servisi</a></li>
+                                        <li><a href="#">•   Endüstriyel Fritöz  Servisi</a></li>
+                                        <li><a href="#">•   Endüstriyel Buz Makinesi Servisi</a></li>
+                                        <li><a href="#">•   Endüstriyel Fırın Servisi</a></li>
                                     </ul>
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
+                            <div class="col-sm-6  col-lg-3 order-4 order-md-2 order-lg-4">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="600ms">
-                                    <a href="#">
-                                        <h5>İLETİŞİM</h5>
-                                    </a>
+                                    <a href="#"><h5>İLETİŞİM</h5></a>
                                     <p>Mustafa Kemal Paşa Caddesi<br />
                                         Siyavuşpaşa Mah. 163 Sk. No:2/A-B<br />
                                         Bahçelievler - İSTANBUL
-                                    </p>
+                                        </p>
                                     <h4>ÇALIŞMA SAATLERİ</h4>
                                     <p>Hafta içi : 09:00-20:00<br />
                                         Hafta sonu : 09:00-20:00</p>
@@ -444,8 +434,7 @@
                     <div class="col-12">
                         <div class="all-rights">
                             <div class="projx-logos wow fadeInDown" data-wow-delay="150ms">
-                                <a href="https://www.projx.com.tr" rel="muse" class="projx-logos-link"
-                                    target="_blank"></a>
+                                <a href="https://www.projx.com.tr" rel="muse" class="projx-logos-link" target="_blank"></a>
                                 <span class="tooltip-projx-logos">
                                     <span class="tooltip-projx-logos-content">
                                         <span class="tooltip-projx-logos-text">
@@ -462,17 +451,14 @@
                                     </figure>
                                 </div>
                             </div>
-                            <p class="wow fadeInDown" data-wow-delay="250ms">Copyright © 2022 ATOM TEKNİK SERVİS All
-                                rights reserved.</p>
-                            <a class="footer-phone ms-auto wow fadeInDown" data-wow-delay="350ms"
-                                href="tel:05322060808">0 532 206 08 08</a>
-                            <a class="footer-mail wow fadeInDown" data-wow-delay="450ms"
-                                href="mailto:destek@atomteknikservis.com">destek@atomteknikservis.com</a>
+                            <p class="wow fadeInDown" data-wow-delay="250ms">Copyright © 2022 ATOM TEKNİK SERVİS All rights reserved.</p>
+                            <a class="footer-phone ms-auto wow fadeInDown" data-wow-delay="350ms" href="tel:05322060808">0 532 206 08 08</a>
+                            <a class="footer-mail wow fadeInDown" data-wow-delay="450ms" href="mailto:destek@atomteknikservis.com">destek@atomteknikservis.com</a>
                         </div>
                     </div>
                 </div>
             </div>
-
+            
         </footer>
 
 
