--- a/atom-proje/homepage.html
+++ b/atom-proje/homepage.html
@@ -343,7 +343,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-8 mt-5 mb-5 order-1 order-lg-2">
-                        <div class="counter-numbers">
+                        <div class="counter-numbers wow fadeInUp">
                             <div class="row gx-5">
                                 <div class="col-6 col-lg-3  item">
                                     <div class="value" akhi="782">0</div>
@@ -376,11 +376,11 @@
                         <div class="row">
                             
                             <div class="col-12 offset-xl-1 offset-xxl-3 col-xl-10 col-xxl-7">
-                                <h3>Teknik Servis<br />
+                                <h3 class="wow fadeInDown" data-wow-delay="200ms">Teknik Servis<br />
                                     Süreci Nasıl İşler?</h3>
                                 <div class="row px-md-5 px-lg-0">
                                     <div class="col-md-6">
-                                        <div class="box">
+                                        <div class="box wow fadeInLeft" data-wow-delay="200ms">
                                             <div class="box-img">
                                                 <img src="./frontend/icons/mobil.png" alt="">
                                             </div>
@@ -393,7 +393,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="box">
+                                        <div class="box wow fadeInLeft" data-wow-delay="500ms">
                                             <div class="box-img">
                                                 <img src="./frontend/icons/notes.png" alt="">
                                             </div>
@@ -406,7 +406,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="box">
+                                        <div class="box wow fadeInLeft" data-wow-delay="700ms">
                                             <div class="box-img">
                                                 <img src="./frontend/icons/cekic.png" alt="">
                                             </div>
@@ -418,7 +418,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="box">
+                                        <div class="box wow fadeInLeft" data-wow-delay="900ms">
                                             <div class="box-img">
                                                 <img src="./frontend/icons/rocket.png" alt="">
                                             </div>
@@ -436,7 +436,7 @@
                     </div>
                     <div class="col-lg-6 p-md-5 p-lg-0 right-side my-auto p-0">
                         <div class="col-12  col-xl-7">
-                            <div class="how-it-image shine-animation cpointer">
+                            <div class="how-it-image shine-animation cpointer wow fadeInRight" data-wow-delay="550ms">
                                 <img src="./frontend/images/howitworks.png" alt="">
                             </div>
                         </div>
@@ -449,10 +449,10 @@
         <section class="comment-section">
             <div class="container body-1 ">
                 <div class="row">
-                    <h3 class="">
+                    <h3 class="wow fadeInDown" data-wow-delay="300ms">
                         Mutlu Müşteri Yorumları
                     </h3>
-                    <div class="swiper mySwiper swiper-init demo-swiper comment-section" data-pagination='{"el": ".swiper-pagination"}' data-space-between="10" data-slides-per-view="3">
+                    <div class="swiper mySwiper swiper-init demo-swiper comment-section wow fadeInDown" data-wow-delay="600ms" data-pagination='{"el": ".swiper-pagination"}' data-space-between="10" data-slides-per-view="3">
                         <div class="swiper-wrapper" >
                             <div class="swiper-slide">
                                 <div class="box-item mx-auto mx-md-0">
@@ -683,10 +683,10 @@
 
         <section class="blog-section">
             <div class="container body-5">
-                <h3>BLOG »</h3>
+                <h3 class="wow fadeInDown" data-wow-delay="200ms">BLOG »</h3>
 
             <div class="blog-slider">
-                <div class="blog-box ">
+                <div class="blog-box wow fadeInLeft" data-wow-delay="200ms">
                     <div class="item-img shine-animation">
                         <img src="./frontend/images/blog-1.png" alt="...">
                     </div>
@@ -699,7 +699,7 @@
                         <a href="#" class="btn-style-4">DETAYLI OKU »</a>
                     </div>
                 </div>
-                <div class="blog-box ">
+                <div class="blog-box wow fadeInLeft" data-wow-delay="200ms">
                     <div class="item-img shine-animation">
                         <img src="./frontend/images/blog-2.png" alt="...">
                     </div>
@@ -712,7 +712,7 @@
                         <a href="#" class="btn-style-4">DETAYLI OKU »</a>
                     </div>
                 </div>
-                <div class="blog-box ">
+                <div class="blog-box wow fadeInLeft" data-wow-delay="200ms">
                     <div class="item-img shine-animation">
                         <img src="./frontend/images/blog-3.png" alt="...">
                     </div>
@@ -725,7 +725,7 @@
                         <a href="#" class="btn-style-4">DETAYLI OKU »</a>
                     </div>
                 </div>
-                <div class="blog-box ">
+                <div class="blog-box wow fadeInLeft" data-wow-delay="200ms">
                     <div class="item-img shine-animation">
                         <img src="./frontend/images/blog-1.png" alt="...">
                     </div>
@@ -742,7 +742,6 @@
             </div>
         </section>
 
-        
         <div class="footer-above">
             <div class="online-form wow fadeInLeft" data-wow-delay="150ms">
                 <h5>ONLINE FORM</h5>
@@ -758,9 +757,9 @@
         <footer>
 
             <div class="container body-5">
-                <div class="row">
+                <div class="row gy-1">
                     <div class="col-md-4 col-lg-3 mb-5 mb-md-0">
-                        <div class="logo-section d-flex flex-column wow fadeInLeft" data-wow-delay="150ms">
+                        <div class="logo-section d-flex flex-column wow fadeInLeft" data-wow-delay="200ms">
                             <a href="#"><img  class="mb-4 logo-img" src="./frontend/images/logo-footer.png" alt=""></a>
                             <a href="#" class="footer-instagram d-flex flex-column align-items-center text-center text-md-start">
                                 <i class="fa-brands fa-instagram"></i>
@@ -769,9 +768,9 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-lg-9">
-                        <div class="row g5">
-                            <div class="col-sm-6  col-lg-3">
-                                <div class="footer-nav wow fadeInDown" data-wow-delay="150ms">
+                        <div class="row gx-2 gx-lg-4">
+                            <div class="col-sm-6  col-lg-3 order-1">
+                                <div class="footer-nav wow fadeInDown" data-wow-delay="450ms">
                                     <a href="#"><h5>KURUMSAL</h5></a>
                                     <ul>
                                         <li><a href="#">Hakkımızda</a></li>
@@ -780,8 +779,8 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
-                                <div class="footer-nav wow fadeInDown" data-wow-delay="300ms">
+                            <div class="col-sm-6  col-lg-3 order-2 order-md-4 order-lg-2">
+                                <div class="footer-nav wow fadeInDown" data-wow-delay="700ms">
                                     <a href="#"><h5>EV VE OFİS</h5></a>
                                     <ul>
                                         <li><a href="#">•   Klima Bakım Onarım</a></li>
@@ -798,8 +797,8 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
-                                <div class="footer-nav wow fadeInDown" data-wow-delay="450ms">
+                            <div class="col-sm-6  col-lg-3 order-3">
+                                <div class="footer-nav wow fadeInDown" data-wow-delay="950ms">
                                     <a href="#"><h5>ENDÜSTRİYEL MUTFAK</h5></a>
                                     <ul>
                                         <li><a href="#">•   Endüstriyel Buzdolabı Servisi</a></li>
@@ -812,8 +811,8 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
-                                <div class="footer-nav wow fadeInDown" data-wow-delay="600ms">
+                            <div class="col-sm-6  col-lg-3 order-4 order-md-2 order-lg-4">
+                                <div class="footer-nav wow fadeInDown" data-wow-delay="1200ms">
                                     <a href="#"><h5>İLETİŞİM</h5></a>
                                     <p>Mustafa Kemal Paşa Caddesi<br />
                                         Siyavuşpaşa Mah. 163 Sk. No:2/A-B<br />
@@ -828,7 +827,7 @@
                     </div>
                     <div class="col-12">
                         <div class="all-rights">
-                            <div class="projx-logos wow fadeInDown" data-wow-delay="150ms">
+                            <div class="projx-logos wow fadeInLeft" data-wow-delay="1350ms">
                                 <a href="https://www.projx.com.tr" rel="muse" class="projx-logos-link" target="_blank"></a>
                                 <span class="tooltip-projx-logos">
                                     <span class="tooltip-projx-logos-content">
@@ -846,9 +845,9 @@
                                     </figure>
                                 </div>
                             </div>
-                            <p class="wow fadeInDown" data-wow-delay="250ms">Copyright © 2022 ATOM TEKNİK SERVİS All rights reserved.</p>
-                            <a class="footer-phone ms-auto wow fadeInDown" data-wow-delay="350ms" href="tel:05322060808">0 532 206 08 08</a>
-                            <a class="footer-mail wow fadeInDown" data-wow-delay="450ms" href="mailto:destek@atomteknikservis.com">destek@atomteknikservis.com</a>
+                            <p class="wow fadeInDown" data-wow-delay="1450ms">Copyright © 2022 ATOM TEKNİK SERVİS All rights reserved.</p>
+                            <a class="footer-phone ms-auto wow fadeInRight" data-wow-delay="1550ms" href="tel:05322060808">0 532 206 08 08</a>
+                            <a class="footer-mail wow fadeInRight" data-wow-delay="1650ms" href="mailto:destek@atomteknikservis.com">destek@atomteknikservis.com</a>
                         </div>
                     </div>
                 </div>
