--- a/atom-proje/aboutus.html
+++ b/atom-proje/aboutus.html
@@ -267,7 +267,7 @@
             <div class="container">
                 <div class="row gx-5">
                     <div class="col-12">
-                        <div class="counter-numbers">
+                        <div class="counter-numbers wow fadeInUp">
                             <div class="row ">
                                 <div class="col-6 col-lg-3  item">
                                     <div class="value" akhi="782">0</div>
@@ -332,7 +332,7 @@
         <footer>
 
             <div class="container body-5">
-                <div class="row">
+                <div class="row gy-1">
                     <div class="col-md-4 col-lg-3 mb-5 mb-md-0">
                         <div class="logo-section d-flex flex-column wow fadeInLeft" data-wow-delay="150ms">
                             <a href="#"><img  class="mb-4 logo-img" src="./frontend/images/logo-footer.png" alt=""></a>
@@ -343,8 +343,8 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-lg-9">
-                        <div class="row g5">
-                            <div class="col-sm-6  col-lg-3">
+                        <div class="row gx-2 gx-lg-4">
+                            <div class="col-sm-6  col-lg-3 order-1">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="150ms">
                                     <a href="#"><h5>KURUMSAL</h5></a>
                                     <ul>
@@ -354,7 +354,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
+                            <div class="col-sm-6  col-lg-3 order-2 order-md-4 order-lg-2">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="300ms">
                                     <a href="#"><h5>EV VE OFİS</h5></a>
                                     <ul>
@@ -372,7 +372,7 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
+                            <div class="col-sm-6  col-lg-3 order-3">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="450ms">
                                     <a href="#"><h5>ENDÜSTRİYEL MUTFAK</h5></a>
                                     <ul>
@@ -386,7 +386,7 @@
                                     <a class="list-button-2" href="#">Tümünü Gör »</a>
                                 </div>
                             </div>
-                            <div class="col-sm-6  col-lg-3">
+                            <div class="col-sm-6  col-lg-3 order-4 order-md-2 order-lg-4">
                                 <div class="footer-nav wow fadeInDown" data-wow-delay="600ms">
                                     <a href="#"><h5>İLETİŞİM</h5></a>
                                     <p>Mustafa Kemal Paşa Caddesi<br />
