--- a/atom-proje/hizmetler-detay.html
+++ b/atom-proje/hizmetler-detay.html
@@ -25,7 +25,7 @@
 
             <div class="container-fluid p-0 ">
                 <header>
-                    <div class="banner-logo ">
+                    <div class="banner-logo">
                         <a href="#">
                             <figure>
                                 <img src="./frontend/images/atom-logo.png" alt="...">
@@ -81,6 +81,7 @@
                             0 532 206 08 08
                         </a>
                     </div>
+                    <div class="hamburger d-none"><i class="fa-solid fa-bars"></i></div>
                 </header>
             </div>
         
