only 'hizmetler' 's button left

--- a/atom-proje/article-tv.html
+++ b/atom-proje/article-tv.html
@@ -295,7 +295,7 @@
         </div>
         
 
-        <section class="why-us my-5 my-md-0">
+        <section class="why-us my-2 my-md-0">
             <div class="container body-1">
                 <div class="box-section mt-0">
                     <div class="container body-14">
@@ -324,7 +324,7 @@
             </div>
         </section>
 
-        <div class="horizon"></div>
+        <div class="horizon d-none d-md-block"></div>
 
         <section class="blog-section blog-s-2 ">
             <div class="container body-5">
