--- a/atom-proje/homepage.html
+++ b/atom-proje/homepage.html
@@ -310,7 +310,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 " >
-                        <div class="services-content mt-md-5 pt-md-4">
+                        <div class="services-content mt-md-5 pt-md-4 pt-lg-0">
                             <h3 class="wow fadeInDown" data-wow-delay="200ms">Hizmetlerimiz</h3>
 
                             <p class="wow fadeInDown" data-wow-delay="400ms">İstanbul genelinde, tüm Beyaz Eşyalarınız için Teknik servis hizmeti veriyoruz. Teknik
