only left burger open

--- a/atom-proje/aboutus.html
+++ b/atom-proje/aboutus.html
@@ -167,7 +167,7 @@
         <section class="image-content-section">
             <div class="container body-5">
                 <div class="row gx-5">
-                    <div class="col-md-6 my-md-auto my-md-0 shine-animation cpointer">
+                    <div class="col-md-6 my-md-auto my-md-0  cpointer">
                         <figcaption class="mb-4 wow fadeInLeft" data-wow-delay="350ms">
                             <img class="w-100" src="./frontend/images/about-us.png" alt="">
                         </figcaption>
@@ -229,7 +229,7 @@
         <section class="image-content-section-2">
             <div class="container body-5">
                 <div class="row">
-                    <div class="col-md-6 my-md-auto my-md-0 order-2 shine-animation cpointer">
+                    <div class="col-md-6 my-md-auto my-md-0 order-2  cpointer">
                         <figcaption class="mb-4 wow fadeInRight" data-wow-delay="750ms">
                             <img class="w-100" src="./frontend/images/vmk.png" alt="">
                         </figcaption>
