--- a/atom-proje/blog.html
+++ b/atom-proje/blog.html
@@ -169,7 +169,7 @@
         <section class="blog-content-section">
             <div class="container body-20">
                 <div class="row">
-                    <div class="col-md-6 my-auto my-lg-0 p-0 shine-animation cpointer mb-4 mb-md-0">
+                    <div class="col-md-6 my-auto my-lg-0 p-0  cpointer mb-4 mb-md-0">
                         <figcaption class="mb-4 wow fadeInLeft" data-wow-delay="600ms">
                             <img class="w-100" src="./frontend/images/blog/tv.png" alt="">
                         </figcaption>
@@ -201,7 +201,7 @@
                             <a href="#" class="btn-style-4">DETAYLI OKU »</a>
                         </div>
                     </div>
-                    <div class="col-md-6 p-0 my-auto my-lg-0 shine-animation cpointer order-1 order-md-2 mb-4 mb-md-0">
+                    <div class="col-md-6 p-0 my-auto my-lg-0  cpointer order-1 order-md-2 mb-4 mb-md-0">
                         <figcaption class="mb-4 wow fadeInLeft" data-wow-delay="600ms">
                             <img class="w-100" src="./frontend/images/blog/klima.png" alt="">
                         </figcaption>
@@ -214,7 +214,7 @@
         <section class="blog-content-section">
             <div class="container body-20">
                 <div class="row">
-                    <div class="col-md-6 my-auto my-lg-0 p-0 shine-animation cpointer mb-4 mb-md-0">
+                    <div class="col-md-6 my-auto my-lg-0 p-0  cpointer mb-4 mb-md-0">
                         <figcaption class="mb-4 wow fadeInLeft" data-wow-delay="600ms">
                             <img class="w-100" src="./frontend/images/blog/bulasik.png" alt="">
                         </figcaption>
