--- a/atom-proje/bulasik-makinesi-article.html
+++ b/atom-proje/bulasik-makinesi-article.html
@@ -164,7 +164,7 @@
         <!--      -------       -->
         <section class="services-detail mt-5">
             <div class="container body-1">
-                <div class="item-img shine-animation">
+                <div class="item-img ">
                     <img class="w-100" src="./frontend/images/bulasik-title.png" alt="">
                 </div>
                  <div class="content-2">
@@ -179,7 +179,7 @@
             <div class="dual-section">
                 <div class="container body-19">
                     <div class="row ">
-                        <div class="col-md-6 shine-animation wow fadeInLeft text-center text-md-end " data-wow-delay="500ms">
+                        <div class="col-md-6  wow fadeInLeft text-center text-md-end " data-wow-delay="500ms">
                             
                             
                                 <figure class="">
@@ -206,7 +206,7 @@
         <div class="container body-11 relative">
             <div class="dual-section2">
                 <div class="row ">
-                    <div class="col-md-5 my-md-auto my-lg-none shine-animation wow fadeInRight text-center text-md-end order-1 order-md-2" data-wow-delay="500ms">
+                    <div class="col-md-5 my-md-auto my-lg-none  wow fadeInRight text-center text-md-end order-1 order-md-2" data-wow-delay="500ms">
                             <figure class="">
                                 <img  src="./frontend/images/bulasik-2.png" class="  w-100" alt="">
                             </figure>
@@ -313,7 +313,7 @@
 
             <div class="blog-slider">
                 <div class="blog-box ">
-                    <div class="item-img shine-animation">
+                    <div class="item-img ">
                         <img src="./frontend/images/blog-1.png" alt="...">
                     </div>
                     <div class="item-content">
@@ -326,7 +326,7 @@
                     </div>
                 </div>
                 <div class="blog-box ">
-                    <div class="item-img shine-animation">
+                    <div class="item-img ">
                         <img src="./frontend/images/blog-2.png" alt="...">
                     </div>
                     <div class="item-content">
@@ -339,7 +339,7 @@
                     </div>
                 </div>
                 <div class="blog-box ">
-                    <div class="item-img shine-animation">
+                    <div class="item-img ">
                         <img src="./frontend/images/blog-3.png" alt="...">
                     </div>
                     <div class="item-content">
@@ -352,7 +352,7 @@
                     </div>
                 </div>
                 <div class="blog-box ">
-                    <div class="item-img shine-animation">
+                    <div class="item-img ">
                         <img src="./frontend/images/blog-1.png" alt="...">
                     </div>
                     <div class="item-content">
