--- a/atom-proje/endustriyel-detay.html
+++ b/atom-proje/endustriyel-detay.html
@@ -164,7 +164,7 @@
 
         <section class="services-detail mt-5" id="servicesDetail">
             <div class="container body-5">
-                <div class="item-img shine-animation wow fadeInDown" data-wow-delay="200ms">
+                <div class="item-img  wow fadeInDown" data-wow-delay="200ms">
                     <img class="w-100" src="./frontend/images/endustriyel-detay/endustriyel-0.png" alt="">
                 </div>
                 <div class="content bg-3 ">
