--- a/atom-proje/homepage.html
+++ b/atom-proje/homepage.html
@@ -261,7 +261,7 @@
 
         <section class="services" id="services-section">
             <div class="container body-5 mt-3 marginH">
-                <div class="row mt-5">
+                <div class="row mt-5 gx-md-4">
                     <div class="col-md-6 col-lg-8 mb-4 mb-md-0 wow fadeInLeft" data-wow-delay="200ms">
                         <div class="services-slider ">
                             <div class="item">
