--- a/atom-proje/hizmetler-detay.html
+++ b/atom-proje/hizmetler-detay.html
@@ -164,7 +164,7 @@
         
         <section class="services-detail mt-5" id="services-detail-main">
             <div class="container body-5">
-                <div class="item-img shine-animation">
+                <div class="item-img ">
                     <img class="w-100" src="./frontend/images/servis-detay/0.png" alt="">
                 </div>
                  <div class="content">
@@ -222,7 +222,7 @@
 
         <section class="services my-5" id="services-section">
             <div class="container body-5 ">
-                <div class="row ">
+                <div class="row gx-md-4 gx-lg-0">
                     <div class="col-md-6 col-lg-8 mb-4 mb-md-0">
                         <div class="services-slider ">
 
@@ -378,8 +378,8 @@
 
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4 my-auto">
-                        <div class="services-content ">
+                    <div class="col-md-6 col-lg-4 ">
+                        <div class="services-content mt-md-5 pt-md-4 pt-lg-0">
                             <h3>HİZMETLERİMİZ</h3>
 
                             <p>İstanbul genelinde, tüm Beyaz Eşyalarınız için Teknik servis hizmeti veriyoruz. Teknik
